[package]

name = "linked-hash-map"
version = "0.5.6"
license = "MIT/Apache-2.0"
description = "A HashMap wrapper that holds key-value pairs in insertion order"
authors = [
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Andrew Paseltiner <apaseltiner@gmail.com>",
]

repository = "https://github.com/contain-rs/linked-hash-map"
homepage = "https://github.com/contain-rs/linked-hash-map"
documentation = "https://docs.rs/linked-hash-map"
keywords = ["data-structures"]
readme = "README.md"
exclude = [".github", "src/tests"]

[features]
nightly = []
serde_impl = ["serde"]
heapsize_impl = ["heapsize"]

[dependencies]
serde = { version = "1.0", optional = true }
heapsize = { version = "0.4", optional = true }

[dev-dependencies]
serde_test = { version = "1.0" }
